derive/test/compile_fail/record_as_seq_incomplete_labels.stderr
error: unsupported attribute `label` on struct field
 --> compile_fail/record_as_seq_incomplete_labels.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Value` (in Nightly builds, run with -Z macro-backtrace for more info)
